‘删除不需要的目录

--- a/cloud-service-A/cloud-server-A/bootstrap.properties
+++ b/cloud-service-A/cloud-server-A/bootstrap.properties
@@ -1,4 +1,4 @@
-spring.application.name= didispace
+spring.application.name=service-A
 spring.cloud.config.profile=test
 spring.cloud.config.label=master
 spring.cloud.config.uri=http://localhost:7001/
