--- a/cloud-eureka-server/cloud-eureka-server/pom.xml
+++ b/cloud-eureka-server/cloud-eureka-server/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.bokesoft</groupId>
-	<artifactId>cloud-config-server</artifactId>
+	<artifactId>cloud-eureka-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>cloud-config-server</name>
+	<name>cloud-eureka-server</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
