--- a/cloud-netflix-zuul/cloud-netflix-zuul/application.properties
+++ b/cloud-netflix-zuul/cloud-netflix-zuul/application.properties
@@ -6,6 +6,6 @@ zuul.routes.api-b.path=/api-b/**
 zuul.routes.api-b.serviceId=ribbon-consumer
 
 zuul.routes.api-a.path=/api-a/**
-zuul.routes.api-a.url=service-A
+zuul.routes.api-a.url=SERVICEASPACE
 
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
