--- a/cloud-config-server/cloud-config-server/application.properties
+++ b/cloud-config-server/cloud-config-server/application.properties
@@ -7,3 +7,12 @@ server.port=7001
 #spring.cloud.config.server.git.password=password
 # 激活本地配置
 spring.profiles.active=native
+
+# 配置服务注册中心
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+
+# 配置rabbitmq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
