集成kafka消息分布式发布订阅消息系统

--- a/cloud-config-server/cloud-config-server/application.properties
+++ b/cloud-config-server/cloud-config-server/application.properties
@@ -12,7 +12,7 @@ spring.profiles.active=native
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
 # 配置rabbitmq
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=admin
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=admin
+#spring.rabbitmq.password=admin
