--- a/cloud-config-server/cloud-config-server/pom.xml
+++ b/cloud-config-server/cloud-config-server/pom.xml
@@ -24,9 +24,9 @@
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
 				<!-- 这个版本对bus的refresh不支持整体刷新 -->
-				<!-- <version>Camden.SR5</version> -->
-				<!-- 这个版本支持bus的refresh整体刷新 -->
-				<version>Brixton.SR5</version>
+				<version>Camden.SR5</version>
+				<!-- 这个版本支持bus的refresh整体刷新;但集成kafka会报java.lang.ClassNotFoundException: kafka.serializer.Decoder错误；请使用两者兼容版本-->
+				<!-- <version>Brixton.SR5</version> -->
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -42,10 +42,15 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
-		<!-- Config Server中也引入Spring Cloud Bus，将配置服务端也加入到消息总线中来 -->
-		<dependency>
+		<!-- Config Server中也引入Spring Cloud Bus rabbitmq，将配置服务端也加入到消息总线中来 -->
+		<!-- <dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
+		</dependency> -->
+		<!-- Config Server中也引入Spring Cloud Bus kafka，将配置服务端也加入到消息总线中来 -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bus-kafka</artifactId>
 		</dependency>
 	</dependencies>
 </project>
