--- a/cloud-serverclient-bus-kafka/pom.xml
+++ b/cloud-serverclient-bus-kafka/pom.xml
@@ -1,16 +1,15 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.bokesoft</groupId>
-	<artifactId>cloud-serverclient-bus-rabbitmq</artifactId>
-	<version>1.0.0</version>
+	<artifactId>cloud-serverclient-bus-kafka</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>cloud-serverclient-bus-rabbitmq</name>
-	<description>Spring Cloud project bus used by rabbitmq</description>
-
+	<name>cloud-serverclient-bus-kafka</name>
+	<description>Spring Cloud project bus used by kafka</description>
+	<url>http://maven.apache.org</url>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -50,7 +49,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
+			<artifactId>spring-cloud-starter-bus-kafka</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -59,13 +58,13 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>Brixton.SR5</version>
+				<version>Camden.SR5</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -74,5 +73,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
